--- a/packages/k8s-secret/package.json
+++ b/packages/k8s-secret/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@fnb/dev-config",
+  "name": "@fnb/k8s-secret",
   "version": "0.0.1",
-  "description": "dev-config helpers",
+  "description": "k8s config and secret",
   "author": "Djo <jonathan.churque@gmail.com>",
   "license": "ISC",
   "main": "src/index.js",
