--- a/packages/k8s-secret/package.json
+++ b/packages/k8s-secret/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@fnb/k8s-secret",
-  "version": "0.0.2",
+  "name": "@front-n-back/k8s-secret",
+  "version": "0.0.1",
   "description": "k8s config and secret",
   "author": "Djo <jonathan.churque@gmail.com>",
   "license": "ISC",
