--- a/packages/sql-client/package.json
+++ b/packages/sql-client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@front-n-back/sql-client",
+  "name": "@jchurque/sql-client",
   "version": "0.0.2",
   "description": "sql-client",
   "author": "Djo <jonathan.churque@gmail.com>",
