--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "build": "lerna exec -- rollup --config",
-    "pkg": "npm run build && lerna publish -- --access public",
+    "pkg": "nl && npm run build && lerna publish -- --access public",
     "force-publish": "npm run build && lerna exec -- npm publish --force --access public",
     "bootstrap": "lerna bootstrap"
   },
